--- a/assets/css/icons.scss
+++ b/assets/css/icons.scss
@@ -3,6 +3,7 @@
 	src: url(../font/job-manager.eot?16367094);
 	src:
 		url(../font/job-manager.eot?16367094#iefix) format("embedded-opentype"),
+		url(../font/job-manager.woff2?16367094) format('woff2'),
 		url(../font/job-manager.woff?16367094) format("woff"),
 		url(../font/job-manager.ttf?16367094) format("truetype"),
 		url(../font/job-manager.svg?16367094#job-manager) format("svg");
