--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -946,3 +946,72 @@ h2 .nav-tab-active, nav .nav-tab-active {
 		}
 	}
 }
+
+/**
+ * Core Add-on Bundle SVG Styles
+ */
+.jm-logo {
+	perspective: 450px;
+	perspective-origin: 50% 50%;
+	position: relative;
+	cursor: pointer;
+	clip-path: circle(50% at 50% 50%);
+	background: #ffef82;
+}
+
+.jm-logo__wrapper.jm-logo__wrapper {
+	gap: calc(var(--happy-sizing-scale) * (16 - 12) + 12px);
+}
+
+.jm-logo__wrapper,
+.jm-logo__wrapper path,
+.jm-logo__wrapper.jm-logo__wrapper a[href]
+{
+	color: #2404EB;
+	fill: currentColor;
+	text-decoration: none !important;
+}
+
+.jm-logo, .jm-logo__inner, .jm-logo__head, .jm-logo__face, .jm-logo__letters {
+	width: 48px;
+	height: 48px;
+}
+
+.jm-logo__inner {
+	clip-path: circle(40px);
+}
+
+.jm-logo__inner, .jm-logo__face, .jm-logo__letters {
+	position: absolute;
+	left: 0;
+	top: 0;
+}
+
+.jm-logo__head {
+	transform: scale(1);
+}
+
+.jm-logo__face, .jm-logo__letters {
+	transform-origin: 50% 50% -60px;
+	transform-style: preserve-3d;
+	backface-visibility: hidden;
+	transition: all 888ms cubic-bezier(.32, 1.29, .9, .98);
+}
+.jm-logo .jm-logo__face {
+	transform: rotateY(-90deg);
+	animation: jm-logo__face 888ms 1000ms cubic-bezier(.32, 1.29, .9, .98) alternate;
+	animation-iteration-count: 2;
+}
+
+.jm-logo .jm-logo__letters {
+	animation: jm-logo__letters 888ms 1000ms cubic-bezier(.32, 1.29, .9, .98) alternate;
+	animation-iteration-count: 2;
+}
+
+.jm-logo__wrapper:hover .jm-logo__face {
+	transform: rotateY(0deg);
+}
+
+.jm-logo__wrapper:hover .jm-logo__letters {
+	transform: rotateY(90deg);
+}
