Make dismiss button classes more explicit

--- a/assets/css/admin-notices.scss
+++ b/assets/css/admin-notices.scss
@@ -76,7 +76,7 @@ $notice-success: #43af99;
 	}
 
 
-	button.notice-dismiss {
+	button.wpjm-notice-dismiss--icon {
 		padding: 6px;
 		color: inherit;
 		position: absolute;
