Allign actions in notices in the center

--- a/assets/css/admin-notices.scss
+++ b/assets/css/admin-notices.scss
@@ -39,7 +39,7 @@ $notice-success: #43af99;
 	&__top {
 		display: flex;
 		flex-direction: row;
-		align-items: flex-start;
+		align-items: center;
 		flex-wrap: wrap;
 		gap: 20px;
 	}
